# val_dynacore

./: CMakeLists.txt  Configuration.h  README.md  package.xml
ExternalSource/: CMakeLists.txt
ExternalSource/Optimizer/: CMakeLists.txt
ExternalSource/Optimizer/QuadProgpp/src/: Array.hh  CMakeLists.txt  QuadProg++.hh
ExternalSource/Quadprogpp/: CMakeLists.txt  QuadProg++.cc  README.md  main.cc
ExternalSource/rbdl/: Joint.h  urdfreader.cc
IHMCMsgInterface/: CMakeLists.txt  package.xml
IHMCMsgInterface/ihmc_launch/: ihmc_interface_node.launch
IHMCMsgInterface/ihmc_nodes/: CMakeLists.txt  ihmc_interface_node.cpp  ihmc_interface_node.h
IHMCMsgInterface/ihmc_tests/: CMakeLists.txt  ihmc_msg_utils_test.cpp
IHMCMsgInterface/ihmc_utils/: CMakeLists.txt  ihmc_msg_utilities.cpp  ihmc_msg_utilities.h
IKModule/: CMakeLists.txt  ik.cpp  ik.h
PotentialFieldControllers/: CMakeLists.txt
PotentialFieldControllers/Controllers/: CMakeLists.txt  alignment_controller.cpp  alignment_controller.h  orientation_controller.cpp  orientation_controller.h  pose_controller.cpp  pose_controller.h  position_controller.cpp  position_controller.h  potential_field_controller.cpp  potential_field_controller.h  rotation_controller.cpp  rotation_controller.h
PotentialFieldControllers/ControllersCore/: CMakeLists.txt  controller_manager.cpp  controller_manager.h
PotentialFieldControllers/PotentialFields/: CMakeLists.txt  attractive_potential_field.cpp  attractive_potential_field.h  attractive_potential_field_joint.cpp  attractive_potential_field_joint.h  attractive_potential_field_orientation.cpp  attractive_potential_field_orientation.h  attractive_potential_field_pose.cpp  attractive_potential_field_pose.h  attractive_potential_field_position.cpp  attractive_potential_field_position.h  potential_field.cpp  potential_field.h  repulsive_potential_field.cpp  repulsive_potential_field.h
RobotSystems/: CMakeLists.txt  RobotSystem.hpp  robot_utils.cpp  robot_utils.h
RobotSystems/Valkyrie/: Valkyrie_Definition.h  Valkyrie_Kin_Model.cpp  Valkyrie_Kin_Model.hpp  Valkyrie_Model.cpp  Valkyrie_Model.hpp  valkyrie_simple.urdf  valkyrie_utils.cpp  valkyrie_utils.hpp
RobotSystems/Valkyrie/model/urdf/: valkyrie_A_copy.urdf  valkyrie_sim.urdf  valkyrie_sim_arm_mass_sims.urdf
SemanticFramePipeline/: CMakeLists.txt  README.md  exceptions.py  pipeline.py  recognize_speech.py  speech_parser.py  valkyrie_semantic_frame_commands_node.py
SemanticFramePipeline/frames/: assemble_chair_frame.yaml  assemble_frame.yaml  assemble_lack_table_frame.yaml  assemble_swivel_chair_frame.yaml  assemble_table_frame.yaml  raise_frame.yaml  raise_left_hand_frame.yaml  raise_right_hand_frame.yaml
SemanticFramePipeline/lu/: assemble_lu.yaml  raise_lu.yaml
Tasks/: CMakeLists.txt  task.cpp  task.h  task_6dpose.cpp  task_6dpose.h  task_joint_config.cpp  task_joint_config.h  task_orientation.cpp  task_orientation.h  task_position.cpp  task_position.h  task_test.cpp
Utils/: CMakeLists.txt  pseudo_inverse.cpp  pseudo_inverse.hpp  rosmsg_utils.cpp  rosmsg_utils.hpp  wrap_eigen.cpp  wrap_eigen.hpp
docs/: IK.md  SCS_sim.md  controllers.md  installation.md  robot_ops.md  robot_testing.md  semantic_frames.md  semantic_frames_RViz.md  semantic_frames_robot.md  semantic_frames_robot_VR.md
launch/: controller_reference_publisher.launch  controller_test.launch  controllers.viz.rviz  ikModule-vizTaskPose.viz.rviz  ikModule.viz.rviz  ik_module_test.launch  nstgro20_val_controller_viz.launch  nstgro20_val_ik_viz.launch  nstgro20_val_sfcontroller_viz.launch  pelvis_transform_broadcaster.launch  semantic_frame_controller.launch  set_valkyrie_standing.launch  sf-controllers.viz.rviz  val_and_ik_viz.launch
nodes/: CMakeLists.txt  controller_manager_node.cpp  controller_manager_node.h  controller_reference_publisher_node.cpp  controller_reference_publisher_node.h  controller_test_node.cpp  controller_test_node.h  ik_module_test_node.cpp  ik_module_test_node.h  pelvis_transform_broadcaster_node.cpp  pelvis_transform_broadcaster_node.h  semantic_frame_controller_node.cpp  semantic_frame_controller_node.h  set_valkyrie_standing_node.cpp  set_valkyrie_standing_node.h
tests/: CMakeLists.txt  ik_test.cpp  main_test.cpp  potential_field_test.cpp  quadprog_test.cpp  robot_model_test.cpp  task_test.cpp
