<?xml version="1.0"?>
<package format="2">
  <name>val_dynacore</name>
  <version>0.0.0</version>
  <description>Adaptation of DynaCoRE kinematics and dynamics library for NASA's Valkyrie Robot.</description>

  <maintainer email="esheetz@umich.edu">Emily Sheetz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>val_footstep_planner_executor</depend>
  <depend>val_moveit_planner_executor</depend>
	  <!-- <depend>cmake_modules</depend> -->
</package>
