<?xml version="1.0"?>
<package format="2">
  <name>IHMCMsgInterface</name>
  <version>0.0.0</version>
  <description>Package for making and sending IHMC controller_msgs to NASA's Valkyrie Robot.</description>

  <maintainer email="esheetz@umich.edu">Emily Sheetz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <!--<depend>controller_msgs</depend>--> <!-- TODO -->
</package>